# ros_gtest

./: CMakeLists.txt  README.md  package.xml
launch/: gtest.test
nodes/: talker_node.cpp
src/: talker.cpp
